Updated developement setup
Update README.md

more updates to development setup

updated instructions for building and running local server

updated jekyll config, added favicon, and updated README

initial commit for new setup

updated documentation

updated build setup to live reload sass files with gulp watch and browser-sync

updated dependency versions and documentation

updated styles for header
- updated footer styles
- added syntax highlighting

more work on base template

updated developer documentation

updated development setup

removed manual excerpt tag and updated front-matter template

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,9 @@ github: gilt
 linkedin: hbc_digital
 instagram: hbcdigital
 
+#google analytics
+#google_analytics: UA-83021339-1
+
 #
 ###################################
 # Jekyll configuration
