adding a package json, start script, and a search plugin

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 #
 title: HBC Digital
 email: pops@gilt.com
-description: We power the web and mobile experiences for Saks, Saks OFF Fifth, Gilt, Lord & Taylor and The Bay.
+description: We power the website and mobile experiences for Saks, Saks Off Fifth, Gilt, Lord & Taylor and The Bay.
 url: # the base hostname & protocol for your site
 
 
