--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,6 @@ description: > # this means to ignore newlines until "baseurl:"
   Saks Off Fifth, Gilt, Lord & Taylor and The Bay.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
-
 #
 ###################################
 # Jekyll configuration
@@ -42,13 +41,12 @@ exclude:
   - README.md
   - CNAME
   - node_modules
-  - assets/sass
+  - gulpfile.js
 
 # Plugin settings
 gems:
   - jekyll-feed
   - octopress-autoprefixer
-  - jekyll-feed
   - jekyll-sitemap
 
 #
