--- a/_config.yml
+++ b/_config.yml
@@ -4,22 +4,32 @@
 ####################################
 #
 title: HBC Digital
+tagline: "Engineering the Retail Experience"
+tagline-2: "Since 1670"
 email: pops@gilt.com
+avatar: hbc-digital-logo.svg
 description: > # this means to ignore newlines until "baseurl:"
   We power the website and mobile experiences for Saks, 
   Saks Off Fifth, Gilt, Lord & Taylor and The Bay.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
+twitter: hbcdigital
+facebook: hbcdigital
+github: gilt
+linkedin: hbc_digital
+instagram: hbcdigital
+
 #
 ###################################
 # Jekyll configuration
 ####################################
 #
-timezone:          EST
-markdown:          kramdown
-highlighter:       rouge
+timezone: EST
+markdown: kramdown
 excerpt_separator: <!--more-->
-permalink:         /articles/:year-:month/:title
+permalink: pretty
+paginate: 1
+paginate_path: "/posts/:num/"
 
 # Markdown settings
 markdown: kramdown
@@ -40,6 +50,7 @@ exclude:
   - package.json
   - README.md
   - CNAME
+  - docs
   - node_modules
   - gulpfile.js
 
@@ -48,44 +59,4 @@ gems:
   - jekyll-feed
   - octopress-autoprefixer
   - jekyll-sitemap
-
-#
-###################################
-# Site Owner configuration
-####################################
-#
-owner:
-  name: HBC Digital
-  avatar: hbc-digital-logo.svg
-  job: "Engineering the Retail Experience"
-  bio: "Since 1670."
-  email: pops@gilt.com
-  disqus-shortname:
-  twitter: hbcdigital
-  facebook: hbcdigital
-  google:
-    plus: #username
-    analytics:
-    verify:
-    ad-client:
-    ad-slot:
-  bing-verify:
-  github: gilt
-  gitlab: #username
-  stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
-  linkedin: hbc_digital
-  skype: #username
-  xing: #username
-  instagram: hbcdigital
-  lastfm: #username
-  tumblr: #username
-  pinterest: #username
-  foursquare: #username
-  steam: #username
-  dribbble: #username
-  youtube: #username
-  soundcloud: #username
-  weibo: #username
-  flickr: #username
-  500px: #username
-  codepen: #username
+  - jekyll-paginate
