--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ timezone: EST
 markdown: kramdown
 permalink: pretty
 paginate: 10
-paginate_path: "blog/:num"
+paginate_path: "archives/:num"
 
 # Markdown settings
 markdown: kramdown
