--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   We power the website and mobile experiences for Saks, 
   Saks Off Fifth, Gilt, Lord & Taylor and The Bay.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
+url: "" # the base hostname & protocol for your site
 twitter: hbcdigital
 facebook: hbcdigital
 github: gilt
@@ -20,7 +20,8 @@ linkedin: hbc_digital
 instagram: hbcdigital
 
 #google analytics
-#google_analytics: UA-83021339-1
+# google_analytics: UA-83021339-1
+google_analytics: UA-00000000-1
 
 #
 ###################################
@@ -30,8 +31,19 @@ instagram: hbcdigital
 timezone: EST
 markdown: kramdown
 permalink: pretty
-paginate: 10
-paginate_path: "archives/:num"
+# permalink: /:categories/:year/:month/:day/:title
+pagination:
+  enabled: true
+  per_page: 10
+  permalink: '/:num/'
+  title: ' - page :num'
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
+
+autopages:
+  # Site-wide kill switch, disable here and it doesn't run at all 
+  enabled: false
 
 # Markdown settings
 markdown: kramdown
@@ -57,8 +69,8 @@ exclude:
   - gulpfile.js
 
 # Plugin settings
-gems:
+plugins:
   - jekyll-feed
   - octopress-autoprefixer
   - jekyll-sitemap
-  - jekyll-paginate
+  - jekyll-paginate-v2
