--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 title: HBC Digital
 tagline: "Engineering the Retail Experience"
 tagline-2: "Since 1670"
-email: pops@gilt.com
+email: evangelism@hbc.com
 avatar: hbc-digital-logo.svg
 description: > # this means to ignore newlines until "baseurl:"
   We power the website and mobile experiences for Saks, 
   Saks Off Fifth, Gilt, Lord & Taylor and The Bay.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. blog
+url: "" #the base hostname & protocol for your site. 
 twitter: hbcdigital
 facebook: hbcdigital
-github: gilt
+github: hbc-tech
 linkedin: hbc_digital
 instagram: hbcdigital
 
