--- a/_config.yml
+++ b/_config.yml
@@ -32,14 +32,9 @@ timezone: EST
 markdown: kramdown
 permalink: pretty
 # permalink: /:categories/:year/:month/:day/:title
-pagination:
-  enabled: true
-  per_page: 10
-  permalink: '/:num/'
-  title: ' - page :num'
-  limit: 0
-  sort_field: 'date'
-  sort_reverse: true
+
+paginate: 7
+paginate_path: "/insights/:num/"
 
 autopages:
   # Site-wide kill switch, disable here and it doesn't run at all 
@@ -73,4 +68,4 @@ plugins:
   - jekyll-feed
   - octopress-autoprefixer
   - jekyll-sitemap
-  - jekyll-paginate-v2
+  - jekyll-paginate
