--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "gulp-replace": "0.6.1",
     "gulp-sass": "3.1.0",
     "gulp-uglify": "3.0.0",
-    "gulp-uncss": "1.0.6"
+    "gulp-uncss": "1.0.6",
+    "pump": "^1.0.2"
   },
   "repository": {
     "type": "git",
