--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ avatar: hbc-digital-logo.svg
 description: > # this means to ignore newlines until "baseurl:"
   We power the website and mobile experiences for Saks, 
   Saks Off Fifth, Gilt, Lord & Taylor and The Bay.
-baseurl: "" # the subpath of your site, e.g. blog
-url: "https://saksdirect.github.io/hbc-tech-blog/" #the base hostname & protocol for your site. 
+baseurl: "/hbc-tech-blog" # the subpath of your site, e.g. blog
+url: "https://saksdirect.github.io" #the base hostname & protocol for your site. 
 twitter: hbcdigital
 facebook: hbcdigital
 github: hbc-tech
