updated site name

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Site wide configuration
 ####################################
 #
-title: HBC Digital
+title: HBC Tech
 tagline: "Engineering the Retail Experience"
 tagline-2: "Since 1670"
 email: evangelism@hbc.com
