updates to code page, minor updates to other static pages

--- a/_data/contributors.yaml
+++ b/_data/contributors.yaml
@@ -16,6 +16,6 @@ Dana Pylayeva:
   avatar: avatar-default.svg
   github: ~
   job_title: Senior Developer
-  mini_bio: I like turtles. Outside of my day job I enjoy contributing to open source home automation and eating vegan.
+  mini_bio: ~
   twitter: ~
   website: http://gilt.com
