updated url in config to staging site

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # this means to ignore newlines until "baseurl:"
   We power the website and mobile experiences for Saks, 
   Saks Off Fifth, Gilt, Lord & Taylor and The Bay.
 baseurl: "/hbc-tech-blog" # the subpath of your site, e.g. blog
-url: "https://tech.hbc.com" #the base hostname & protocol for your site. 
+url: "https://saksdirect.github.io" #the base hostname & protocol for your site. 
 twitter: hbcdigital
 facebook: hbcdigital
 github: hbc-tech
@@ -19,7 +19,6 @@ linkedin: hbc_digital
 instagram: hbcdigital
 
 #google analytics
-# google_analytics: UA-83021339-1
 google_analytics: UA-106560024-1
 
 #
