--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,11 @@ env:
 
 sudo: false # route your build to the container-based infrastructure for a faster build
 
+deploy:
+  provider: pages
+  local-dir: _site
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+  keep-history: true
+  on:
+    branch: master
