--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ branches:
   only:
     - master
 
-
 notifications:
   slack:
     # on_success: always
@@ -32,7 +31,7 @@ deploy:
   provider: pages
   local-dir: _site
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+  github-token: $GITHUB_TOKEN  # Set in travis-ci dashboard, marked secure
   keep-history: true
   on:
     branch: master
