--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,12 @@ branches:
 
 notifications:
   slack:
-    # on_success: always
+    on_success: always
     # on_failure: never
+    template:
+      - "Kudos to %{author} for contributing to the Tech Blog! \nTheir PR <%{pull_request_url}|#%{pull_request_number}> has %{result} build. \nWhy not give them some help merging it!"
     rooms:
-      # - hbcdigital:BAtbJggqijzhCUrMoe2CzAJG#front-end
-      # - hbcdigital:BAtbJggqijzhCUrMoe2CzAJG#random
-      # only to @designfirst
-      - hbcdigital:BAtbJggqijzhCUrMoe2CzAJG 
-
+      - hbcdigital:BAtbJggqijzhCUrMoe2CzAJG#evangelism
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
