--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "npm": "~3.8.6"
   },
   "scripts": {
+    "dev": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jaret_stezelberger@s5a.com",
