--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ tagline-2: "Since 1670"
 email: evangelism@hbc.com
 description: > # this means to ignore newlines until "baseurl:"
   We power the website and mobile experiences for Saks, 
-  Saks Off Fifth, Gilt, Lord & Taylor and The Bay.
+  Saks Off Fifth, Lord & Taylor and The Bay.
 baseurl: "" # the subpath of your site, e.g. blog
 url: "https://tech.hbc.com" #the base hostname & protocol for your site. 
 twitter: hbctechteam
